# RAG-AGENT

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  start.bat  start_frontend.bat  stop.bat
docs/: FRONTEND.md  GAUSS_FULL_REBUILD_PROMPT.md  GITHUB_PUSH_안내.md  사내_설치_및_가우스_프롬프트.md  성능_개선_가이드.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: chat.ts  client.ts  documents.ts  projects.ts  types.ts
frontend/src/components/: ChatPanel.tsx  CreateProjectModal.tsx  DocumentList.tsx  DropZone.tsx  ManualNoteModal.tsx  UploadQueueList.tsx
frontend/src/hooks/: useUploadQueue.ts
frontend/src/pages/: ProjectListPage.tsx  ProjectWorkspacePage.tsx
scripts/: push_to_github.sh
src/project_agent/: __init__.py  config.py  main.py
src/project_agent/api/: __init__.py  routes.py
src/project_agent/index/: __init__.py  embeddings.py  service.py  vector_store.py
src/project_agent/ingest/: __init__.py  chunker.py  normalize.py  parsers.py  pipeline.py
src/project_agent/models/: __init__.py  schemas.py
src/project_agent/rag/: __init__.py  llm.py  service.py
storage_demo/chroma/: chroma.sqlite3
storage_demo/projects/9d54817c-11a3-4a75-a152-b2f410947950/: documents.json  project.json
storage_demo/projects/9d54817c-11a3-4a75-a152-b2f410947950/processed/: ea6ca03d-584c-44b1-b18c-43a49ca032b5.md
tests/: test_api.py  test_chunker.py
